# soxscript

./: CMakeLists.txt  LICENSE  README.MD  fortest.sox  main.cpp  main.sox
grammar/: expression  statement
interpret/: builtin.hpp  callable.hpp  interpreter.cpp  interpreter.hpp  resolver.cpp  resolver.hpp  runtime_scope.cpp  runtime_scope.hpp
lexical/: lexer.cpp  lexer.hpp  token.hpp  token_type.hpp  value_holder.hpp
parser/: expr.hpp  expr_parser.hpp  parser.cpp  parser.hpp  stmt.hpp
utils/: exception.hpp  logger.cpp  logger.hpp  utils.cpp  utils.hpp
